# enigma-simulator

./: .gitignore  LICENSE  README.md  README_PL.md  classes.py  components.py  config.py  encrypted_text.txt  enigma.py  enigma.ui  example.txt  gui.py  main.py  plan.md  pyproject.toml  requirements.txt  settings.json  tempCodeRunnerFile.py  test_components.py  test_enigma.py  ui_enigma.py
README/: README.md
config/: settings.json
docs/: polecenie.md
enigma/: __init__.py  components.py  config.py  enigma.py  main.py  utils.py
enigma/gui/: __init__.py  enigma.ui  gui.py
examples/: encrypted_text.txt
tests/: test_components.py  test_enigma.py  test_utils.py
text/: pytania.md
