[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma-simulator"
version = "0.1.0"
description = "A simulation of the Enigma machine"
authors = [
    {name = "Filip Rzepkowski", email = "0120629@pw.edu.pl"},
]
dependencies = [
    "PySide6>=6.10.1",
    "exceptiongroup>=1.3.1",
    "iniconfig>=2.1.0",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "Pygments>=2.19.2",
]
requires-python = ">=3.8"

[project.scripts]
enigma = "enigma.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["enigma*"]

[tool.setuptools.package-data]
enigma = ["gui/*.ui"]
