[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma-simulator"
version = "0.1.0"
description = "A simulation of the Enigma machine"
authors = [
    {name = "Filip Rzepkowski", email = "0120629@pw.edu.pl"},
]
dependencies = [
    "PySide6==6.10.1",
    "PySide6_Addons==6.10.1",
    "PySide6_Essentials==6.10.1",
    "shiboken6==6.10.1",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "exceptiongroup==1.3.1",
    "flake8==7.3.0",
    "iniconfig==2.1.0",
    "mccabe==0.7.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "Pygments==2.19.2",
    "pytest==8.4.2",
    "tomli==2.3.0",
    "typing_extensions==4.15.0",
]

[project.scripts]
enigma = "enigma.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["enigma*"]

[tool.setuptools.package-data]
enigma = ["gui/*.ui"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

